Fix more on mobile menu

--- a/www/style/_header-nav.scss
+++ b/www/style/_header-nav.scss
@@ -14,11 +14,12 @@
   .top-links-ul {
     @include tablet-and-up {
       margin: 5px 5px 0px 0px;
+      display: flex;
     }
 
     .top-links-li {
       display: inline-block;
-      margin: 0px 10px;
+      margin: 0 auto;
 
       @include tablet-and-up {
         margin: 0px 6px;
@@ -26,7 +27,7 @@
 
       span {
         white-space: nowrap;
-        font-size: 0.75rem;
+        font-size: 0.8rem;
       }
 
       a {
@@ -35,6 +36,7 @@
         color: black;
         text-decoration: none;
         font-weight: 300;
+        margin: 0px 10px 0px 10px;
 
         @include tablet-and-up {
           flex-direction: row;
@@ -43,13 +45,11 @@
         .top-links-image {
           align-self: center;
           margin-bottom: 0px;
-          width: 15px;
-          height: 15px;
+          width: 18px;
+          height: 18px;
 
           @include tablet-and-up {
             margin-right: 5px;
-            width: 18px;
-            height: 18px;
           }
         }
       }
@@ -77,7 +77,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
     padding: 20px;
 
     @include tablet-and-up {
-    margin-bottom: 100px;
+      margin-bottom: 100px;
     }
   }
 
@@ -98,10 +98,10 @@ input:focus:not(:checked) + #toggle-menu-2 {
       }
 
       .kontakt-logo-img {
-        max-width: 160px;
+        max-width: 180px;
 
         @include tablet-and-up {
-            max-width: 260px;
+          max-width: 260px;
         }
       }
     }
@@ -223,7 +223,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
       margin-top: 16px;
       width: 90px;
       //border: 1px solid rgb(250, 250, 250);
-      
+
       &:hover {
         cursor: pointer;
         //border: 1px solid rgb(255, 255, 255);
@@ -371,7 +371,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
       a {
         text-decoration: none;
         color: white;
-        font-size: 1.8rem;
+        font-size: 1.6rem;
         position: relative;
         overflow: hidden;
 
@@ -385,7 +385,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
 
         &#burger-menu-current-page {
           color: $grey-text;
-          font-size: 1.8rem;
+          font-size: 1.6rem;
 
           @include tablet-and-up {
             color: black;
@@ -487,7 +487,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
 .main-menu-li-links {
   @include tablet-and-up {
     display: inline-block;
-    justify-self: center;     
+    justify-self: center;
 
     &#sok-li-links {
       position: absolute;
