--- a/www/style/main-page.css
+++ b/www/style/main-page.css
@@ -22,12 +22,15 @@
 @media (min-width: 1020px) {
   .top-links-nav .top-links-ul {
     margin: 5px 5px 0px 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
 .top-links-nav .top-links-ul .top-links-li {
   display: inline-block;
-  margin: 0px 10px;
+  margin: 0 auto;
 }
 
 @media (min-width: 1020px) {
@@ -38,7 +41,7 @@
 
 .top-links-nav .top-links-ul .top-links-li span {
   white-space: nowrap;
-  font-size: 0.75rem;
+  font-size: 0.8rem;
 }
 
 .top-links-nav .top-links-ul .top-links-li a {
@@ -52,6 +55,7 @@
   color: black;
   text-decoration: none;
   font-weight: 300;
+  margin: 0px 10px 0px 10px;
 }
 
 @media (min-width: 1020px) {
@@ -68,15 +72,13 @@
       -ms-grid-row-align: center;
       align-self: center;
   margin-bottom: 0px;
-  width: 15px;
-  height: 15px;
+  width: 18px;
+  height: 18px;
 }
 
 @media (min-width: 1020px) {
   .top-links-nav .top-links-ul .top-links-li a .top-links-image {
     margin-right: 5px;
-    width: 18px;
-    height: 18px;
   }
 }
 
@@ -136,7 +138,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
 }
 
 .main-menu-nav #main-menu-li-logo #kontakt-logo-anchor .kontakt-logo-img {
-  max-width: 160px;
+  max-width: 180px;
 }
 
 @media (min-width: 1020px) {
@@ -420,7 +422,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
 #nav-menu .burger-menu-ul li a {
   text-decoration: none;
   color: white;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   position: relative;
   overflow: hidden;
 }
@@ -437,7 +439,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
 
 #nav-menu .burger-menu-ul li a#burger-menu-current-page {
   color: #807e7e;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 @media (min-width: 1020px) {
